local/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-048bf318-a488-444d-b504-e7444e941314
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-048bf318-a488-444d-b504-e7444e941314
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
