local/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-6ec02342-28a0-4437-a3f6-7aba750abcf2
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-6ec02342-28a0-4437-a3f6-7aba750abcf2
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-6ec02342-28a0-4437-a3f6-7aba750abcf2
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-6ec02342-28a0-4437-a3f6-7aba750abcf2
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
